# Basic-SDL2-OpenGL-App

./: .gitignore  CMakeLists.txt  README.md  main.cpp
controls/: appControls.cpp  appControls.h
renderer/: Shader.h  appRenderer.cpp  appRenderer.h  appRenderer.hpp  shaderProgram.cpp  shaderProgram.hpp
renderer/textRenderer/: textRenderer.cpp  textRenderer.hpp
uiManager/: button.cpp  button.hpp  uiManager.cpp  uiManager.hpp
utils/: appManager.cpp  appManager.h
